--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>عيد ميلاد Lina 💜</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Nunito:wght@400;800&display=swap');
 
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Nunito', sans-serif;
+      background-color: #0b0011;
+      overflow-x: hidden;
+      color: #fff;
+    }
+
+    .hero {
+      height: 100vh;
+      background-image: url('Happy Birthday Greeting Polaroid Photo Collage Instagram Story_20250724_000052_0000.png');
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(141, 0, 255, 0.4));
+      z-index: 1;
+    }
+
+    .card {
+      position: relative;
+      z-index: 2;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      border-radius: 20px;
+      padding: 40px 30px;
+      max-width: 650px;
+      text-align: center;
+      box-shadow: 0 0 30px rgba(141, 0, 255, 0.4);
+      animation: fadeIn 2s ease-out;
+    }
+
+    .card h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 60px;
+      color: #ffccff;
+      margin-bottom: 20px;
+      animation: pulse 2s infinite;
+    }
+
+    .card p {
+      font-size: 20px;
+      line-height: 1.8;
+      color: #f3eaff;
+    }
+
+    .from {
+      margin-top: 20px;
+      font-size: 18px;
+      font-style: italic;
+      color: #ddd;
+    }
+
+    .floating-hearts {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 80px;
+      background: repeating-linear-gradient(
+        90deg,
+        transparent,
+        transparent 40px,
+        rgba(255, 255, 255, 0.1) 41px,
+        transparent 42px
+      );
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .floating-hearts::before {
+      content: "💜 💖 💕 🌸 💜 💖 💕 🌸 💜 💖 💕 🌸 💜 💖 💕 🌸";
+      position: absolute;
+      white-space: nowrap;
+      font-size: 30px;
+      animation: marquee 20s linear infinite;
+      opacity: 0.15;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.04); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
+    @media (max-width: 600px) {
+      .card {
+        padding: 25px 20px;
+      }
+
+      .card h1 {
+        font-size: 42px;
+      }
+
+      .card p {
+        font-size: 18px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="hero">
+    <div class="overlay"></div>
+    <div class="card">
+      <h1>عيد ميلاد سعيد Lina 🎂</h1>
+      <p>
+        اليوم ماشي بحال الأيام ❤️، اليوم زادت نورة فهاد الدنيا.  
+        كنبغيك بواحد الحب نقي وصافي، وكنوعدك نكون ديما حدك،  
+        فكل فرحة، فكل دمعة، فكل لحظة كتحسي فيها بوحدة.  
+        عندك مكانة كبيرة فقلبي، ومستعد نمشي معاك حتى لنهاية الطريق 💫  
+        تهلاي فراسك، وعيشي كل لحظة بحُب، لأنك تستاهلي كل خير فهاد الكون.
+      </p>
+      <div class="from">– من شخص تيحبك بصدق 🌹</div>
+    </div>
+    <div class="floating-hearts"></div>
+  </div>
+</body>
+</html>
