--- a/index.html
+++ b/index.html
@@ -136,11 +136,24 @@
     <div class="card">
       <h1>عيد ميلاد سعيد Lina 🎂</h1>
       <p>
-        اليوم ماشي بحال الأيام ❤️، اليوم زادت نورة فهاد الدنيا.  
-        كنبغيك بواحد الحب نقي وصافي، وكنوعدك نكون ديما حدك،  
-        فكل فرحة، فكل دمعة، فكل لحظة كتحسي فيها بوحدة.  
-        عندك مكانة كبيرة فقلبي، ومستعد نمشي معاك حتى لنهاية الطريق 💫  
-        تهلاي فراسك، وعيشي كل لحظة بحُب، لأنك تستاهلي كل خير فهاد الكون.
+        Kanbghik 7ob kbir ma kay3rfou 7tta 7ad, w Allah chahid 3la kalami.
+Bghiti t3rafi ch7al katswayi 3ndi? Rah makanek kbir f qalbi.
+W 3omri ma ghadi nkhalik, w ghadi nb9a dima m3ak kif ma kenti,
+f fer7ek, f 7ozn, f skoutek, w f dek da7ka zwina dyalek.
+
+🎂 3id milad sa3id Lina 🎉
+Allah yj3al had l3am khir men li fat,
+w y3tik raha dyal lbal, se77a, dda7ka,
+w l7ob li katsstawli kollo.
+Ana hna, w 7tta ila dnya wlat kollha ddia,
+ghadi nw9af m3ak, nsma3 lik, w nhamik.
+Bghitk tb9ay bikhir dima, w sa3ida,
+w bghit nshofk naj7a, 7orra, w masou9ak f 7tta wa7ed.
+
+Had lhdya bssita,
+walakin jaya men qalb kaybghik b sda9,
+w kantmna twslk rissala li fiha:
+Rak ghaliya, w ghadi tb9ay dima f qalbi bla chourout.
       </p>
       <div class="from">– من شخص تيحبك بصدق 🌹</div>
     </div>
